# c-example

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  readme.md
test/: CMakeLists.txt  cmocka_test.c  criterion_test.c  redirect.sh  unity_test.c
